--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,14 +4,22 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background-image: url('../img/valley.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .content {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+
+    background: rgba(255, 255, 255, 0.24);
+    backdrop-filter: blur(4.2px);
+    border: 1px solid rgba(255, 255, 255, 0.61);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    -webkit-backdrop-filter: blur(4.2px);
 }
 
 @media screen and (min-width: 992px) {
