--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,7 @@
+h1 {
+    color: #10636e;
+}
+
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
@@ -84,6 +88,13 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    transition: 0.3s;
+}
+
+.pokemon:hover {
+    cursor: pointer;
+    filter: saturate(2.2);
+    box-shadow: 0 0 20px 5px #FFF;
 }
 
 .pokemon .number {
@@ -137,13 +148,19 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
+    padding: 1rem 2rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 1rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    transition: 0.5s;
+}
+
+.pagination button:hover {
+    background-color: #4b59c4;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 380px) {
